--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.2.0",
     "request": "^2.88.2",
     "styled-components": "^6.0.5",
     "sweetalert2": "^11.7.20",
