--- a/package.json
+++ b/package.json
@@ -19,15 +19,19 @@
     "react-bootstrap": "^2.8.0",
     "react-bootstrap-validation": "^0.1.11",
     "react-cookie": "^4.1.1",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-modal": "^3.16.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.0",
     "request": "^2.88.2",
+    "sass": "^1.66.1",
     "styled-components": "^6.0.5",
     "sweetalert2": "^11.7.20",
+    "swiper": "^6.8.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
