--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
+    "emotion": "^11.0.0",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.7.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-bootstrap-validation": "^0.1.11",
+    "react-calendar": "^4.6.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
@@ -25,7 +28,7 @@
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.0",
     "request": "^2.88.2",
-    "styled-components": "^6.0.5",
+    "styled-components": "^6.0.7",
     "sweetalert2": "^11.7.20",
     "web-vitals": "^2.1.4"
   },
